--- a/index.html
+++ b/index.html
@@ -8,15 +8,12 @@
   </head>
   <body>
     <div class="location">
-      <h1 class="location-timezone">Timezone</h1>
+      <h1 class="location-timezone"></h1>
       <canvas class="icon" width="128" height="128"></canvas>
     </div>
     <div class="temperature">
-      <div class="temperature-section">
-        <h2 class="temperature-degree">30</h2>
-        <span>F</span>
-      </div>
-      <div class="temperature-description">Summary</div>
+      <h2 class="temperature-degree"></h2>
+      <p class="temperature-description"></p>
     </div>
     <script src="js/skycons.js"></script>
     <script src="js/app.js"></script>
