--- a/index.html
+++ b/index.html
@@ -9,13 +9,12 @@
   <body>
     <div class="location">
       <h1 class="location-timezone"></h1>
-      <canvas class="icon" width="128" height="128"></canvas>
+      <img class="location-icon" />
     </div>
     <div class="temperature">
       <h2 class="temperature-degree"></h2>
       <p class="temperature-description"></p>
     </div>
-    <script src="js/skycons.js"></script>
     <script src="js/app.js"></script>
   </body>
 </html>
