--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="location">
-      <h1 class="location-timezone"></h1>
+      <h1 class="location-name"></h1>
       <img class="location-icon" />
     </div>
     <div class="temperature">
