Changed icons to Skycons

--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
   <body>
     <div class="location">
       <h1 class="location-name"></h1>
-      <img class="location-icon" />
+      <canvas class="icon" width="128" height="128"></canvas>
     </div>
     <div class="temperature">
       <h2 class="temperature-degree"></h2>
       <p class="temperature-description"></p>
     </div>
     <script src="js/app.js"></script>
+    <script src="js/skycons.js"></script>
   </body>
 </html>
